Populated all pages and style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         @-ms-viewport { width: 100vw ; min-zoom: 100% ; zoom: 100% ; }  @viewport { width: 100vw ; min-zoom: 100% zoom: 100% ; }
         @-ms-viewport { user-zoom: fixed ; min-zoom: 100% ; }           @viewport { user-zoom: fixed ; min-zoom: 100% ; }
     </style>
+    <!-- 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+     -->
+    <link href="https://fonts.googleapis.com/css?family=Khula" rel="stylesheet">
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
