Updated pages to uniform navigation and footer

--- a/resources.html
+++ b/resources.html
@@ -20,23 +20,24 @@
   <body>
 
     <header>
+      <h1>Movement Works</h1>
       <a href="index.html" id="logo">
-        <h1>Movement Works</h1>
       </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected">About</a></li>
+          <li><a href="index.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="classes.html">Classes</a></li>
           <li><a href="workshops.html">Workshops</a></li>
           <li><a href="individual.html">Individual Sessions</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="resources.html">Resources</a></li>
+          <li><a href="resources.html" class="selected">Resources</a></li>
         </ul>
       </nav>
     </header>
  
     <section class="wrapper">
+      <h2>Resources</h2>    
       <div id="media">
         <ul id="video">
           <li><iframe width="854" height="480" src="https://www.youtube.com/embed/2F91LdHdzM8" frameborder="0" allowfullscreen></iframe><li>
@@ -47,10 +48,12 @@
         </ul>
       </div>
     </section>
-    
     <footer class="main-footer">
-      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/"><img src="img/footer_facebook.png" alt="facebook contact"></a>
+      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
+        <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
+      </a> 
+      <a href="#top" id="back-footer">Back to Top</a>
+      <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
-    
   </body>
 </html>
