Updated pages with same font

--- a/classes.html
+++ b/classes.html
@@ -19,7 +19,7 @@
 
   <body>
 
-    <header>
+    <header class="header-nav">
       <h1>Movement Works</h1>
       <a href="index.html" id="logo">
       </a>
@@ -36,9 +36,12 @@
       </nav>
     </header>
 
-    <section id="wrapper">
+
+    <section class="wrapper">
       <h2>Classes</h2>    
     </section>
+    
+    
     <footer class="main-footer">
       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
         <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
