--- a/individual.html
+++ b/individual.html
@@ -36,7 +36,7 @@
       </nav>
     </header>
 
-    <section id="wrapper">
+    <section class="wrapper">
       <h2>Individual Sessions</h2>
     </section>
     <footer class="main-footer">
