--- a/blog.html
+++ b/blog.html
@@ -37,9 +37,10 @@
       </nav>
     </header>
 
-    <section id="wrapper">
+    <section class="wrapper">
       <h2>Blog</h2>    
     </section>
+    
     <footer class="main-footer">
       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
         <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
