--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,7 @@
         @-ms-viewport { width: 100vw ; min-zoom: 100% ; zoom: 100% ; }  @viewport { width: 100vw ; min-zoom: 100% zoom: 100% ; }
         @-ms-viewport { user-zoom: fixed ; min-zoom: 100% ; }           @viewport { user-zoom: fixed ; min-zoom: 100% ; }
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
-      
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -37,7 +35,7 @@
       </nav>
     </header>
 
-    <section id="wrapper">
+    <section class="wrapper">
       <div class="location">
         <h2>Visit our Location</h2>
         <p>161 St. Matthews Ave, Suite 15, Louisville, KY, 40207</p>
@@ -45,10 +43,11 @@
 	    <div class="phone">
 		    <h2>Give us a Call</h2>
 		    <a href="tel:502-240-7057">502-240-7057</a>
-	    </div>        
+        <img src="img/phone.svg" alt="phone contact" class="social-icon">
+	    </div>
 	    <div class="email">
 		    <h2>Send us a Message</h2>
-		     <img src="img/phone.svg" alt="phone contact" class="social-icon">
+		     <img src="img/mail.svg" alt="email contact" class="social-icon">
         <a href="mailto:contactdorothy@gmail.com">contactdorothy@gmail.com</a>
       </div>
 
