--- a/workshops.html
+++ b/workshops.html
@@ -36,9 +36,10 @@
       </nav>
     </header>
 
-    <section id="wrapper">
+    <section class="wrapper">
       <h2>Workshops</h2>        
     </section>
+    
     <footer class="main-footer">
       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
         <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
