Responsive menu almost there

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,6 @@
         @-ms-viewport { width: 100vw ; min-zoom: 100% ; zoom: 100% ; }  @viewport { width: 100vw ; min-zoom: 100% zoom: 100% ; }
         @-ms-viewport { user-zoom: fixed ; min-zoom: 100% ; }           @viewport { user-zoom: fixed ; min-zoom: 100% ; }
     </style>
-
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
@@ -19,11 +18,11 @@
   </head>
 
   <body>
-
-    <header>
+    <header class="header-nav">
       <h1>Movement Works</h1>
       <a href="index.html" id="logo">
       </a>
+      <hr class="header-hr">
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
@@ -37,14 +36,16 @@
       </nav>
     </header>
 
+
     <section class="wrapper">
-      <h2>Blog</h2>    
+      <h2>Classes</h2>    
     </section>
+    
     
     <footer class="main-footer">
       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
         <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
-      </a> 
+      </a>
       <a href="#top" id="back-footer">Back to Top</a>
       <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
