--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,11 @@
   </head>
 
   <body>
-    <header>
+    <header class="header-nav">
       <h1>Movement Works</h1>
       <a href="index.html" id="logo">
       </a>
+      <hr class="header-hr">
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
@@ -62,11 +63,11 @@
       </div>
       <!-- /Mail List -->
 	  
-	  </section>
+    </section>
     <footer class="main-footer">
        <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
            <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
-       </a> 
+       </a>
 	   <a href="#top" id="back-footer">Back to Top</a>
        <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
