--- a/resources.html
+++ b/resources.html
@@ -18,11 +18,11 @@
   </head>
 
   <body>
-
-    <header>
+    <header class="header-nav">
       <h1>Movement Works</h1>
       <a href="index.html" id="logo">
       </a>
+      <hr class="header-hr">
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
@@ -40,8 +40,9 @@
       <h2>Resources</h2>    
       <div id="media">
         <ul id="video">
-          <li><iframe width="854" height="480" src="https://www.youtube.com/embed/2F91LdHdzM8" frameborder="0" allowfullscreen></iframe><li>
+          <li><iframe width="854" height="480" src="https://www.youtube.com/embed/2F91LdHdzM8" frameborder="0" allowfullscreen></iframe></li>
 <!--           <li><video src="media/example.mp4" type="video/mp4" controls></video> </li> -->
+          <li><iframe width="854" height="480" src="https://www.youtube.com/watch?v=owztcV5I_SU"></iframe></li>
         </ul>
         <ul id="audio">
           <li><audio src="media/Opening Like a Book ATM.m4a" type="audio/m4a" controls></audio> </li>
