--- a/individual.html
+++ b/individual.html
@@ -18,11 +18,11 @@
   </head>
 
   <body>
-
-    <header>
+    <header class="header-nav">
       <h1>Movement Works</h1>
       <a href="index.html" id="logo">
       </a>
+      <hr class="header-hr">
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
