Added google map in contact.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Movement Works</title>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <!-- add following line so that the viewport actually uses the device width -->
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no"> 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <style>
@@ -34,7 +35,7 @@
           <li><a href="individual.html">Individual Sessions</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="resources.html">Resources</a></li>
-          <!-- following is used to show the nav as a menu on small display devices -->
+          <!-- following is the button used to show the nav as a menu on small display devices -->
         </ul>
         <a href="javascript:void(0);" class="icon" onclick="showMyMenu()">&#9776;</a>
       </nav>
@@ -106,10 +107,6 @@
           After class, some things participants have said are&hellip; that they feel free in their joints, more stable and balanced, that they stand taller, are more calm and focused, and that chronic pain seems to have melted away. 
         </p>
         
-        <h1>Workshops</h1>
-        <a href="workshops.html">
-        </a>
-
         <h1>Student feeback</h1>
         <blockquote>
           I have a herniated disc, but since I have been taking Dorothy&rsquo;s Awareness Through Movement classes, I have no lower back pain at all!
@@ -133,7 +130,7 @@
     </section>
     <footer class="main-footer">
        <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
-           <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
+           <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
        </a>
 	   <a href="#top" id="back-footer">Back to Top</a>
        <p>&copy; 2017 Dorothy Henning.</p>
