--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,18 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <!-- This stylesheet contains specific styles for displaying the map
+         on this page. Replace it with your own styles as described in the
+         documentation:
+         https://developers.google.com/maps/documentation/javascript/tutorial -->
+    <link rel="stylesheet" href="https://developers.google.com/maps/documentation/javascript/demos/demos.css">
+    <style>
+      #map {
+        width: 100%;
+        height: 260px;
+        background-color: grey;
+      }
+    </style>
   </head>
 
   <body>
@@ -40,6 +52,8 @@
       <div class="location">
         <h2>Visit our Location</h2>
         <p>161 St. Matthews Ave, Suite 15, Louisville, KY, 40207</p>
+        <div id="map" style="height: 260px;">
+        </div>
       </div>
 	    <div class="phone">
 		    <h2>Give us a Call</h2>
@@ -62,6 +76,7 @@
         </form>
       </div>
       <!-- /Mail List -->
+    
 	  
     </section>
     <footer class="main-footer">
@@ -71,5 +86,31 @@
 	   <a href="#top" id="back-footer">Back to Top</a>
        <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
+    
+    <!-- Google Map javascript -->
+    <script>
+      function initMap() {
+        var coord = {lat: 38.256636, lng: -85.652270};
+        // Create a map object and specify the DOM element for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: coord,
+          scrollwheel: false,
+          zoom: 15
+        });
+        var marker = new google.maps.Marker({
+        	position: coord,
+        	map: map
+        });
+        //Resize Function
+        google.maps.event.addDomListener(window, "resize", function() {
+          var center = map.getCenter();
+          google.maps.event.trigger(map, "resize");
+          map.setCenter(center);
+        });
+        google.maps.event.addDomListener(window, 'load', initialize);
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5ZSc7hlxHu8rRf_TJRPC6OoceS1yrx9c&callback=initMap"
+    async defer></script>
   </body>
 </html>
