Fixed major issues but not done.

--- a/blog.html
+++ b/blog.html
@@ -38,16 +38,20 @@
 
 
     <section class="wrapper">
-      <h2>Blog</h2>    
+      <h2 class="blog">Blog</h2>
+      <input type="text" class="blog-quote" style="width: 100%;">
+      <button>Add quote</button>
     </section>
     
     
     <footer class="main-footer">
-      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
-        <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
-      </a>
-      <a href="#top" id="back-footer">Back to Top</a>
-      <p>&copy; 2017 Dorothy Henning.</p>
+       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
+           <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
+       </a>
+     <a href="#top" id="back-footer">Back to Top</a>
+       <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
+    <!-- Javascript code to add text into the Blog page -->
+    <script src="js/blog.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
