--- a/classes.html
+++ b/classes.html
@@ -36,18 +36,77 @@
       </nav>
     </header>
 
-
     <section class="wrapper">
-      <h2>Classes</h2>    
+      <h2>AWARENESS THROUGH MOVEMENT (ATM) Classes</h2>
+      <table class="atm-classes">
+      <thead>
+        <tr>
+          <th colspan="2">
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><h4>ATM Classes at Full Circle Holistic</h4></td>
+        </tr>
+        <tr>
+          <td>Tuesday</td>
+        </tr>
+        <tr>
+          <td>6:30 – 7:30pm</td>
+        </tr>
+        <tr>
+          <td>Full Circle Holistic Women’s Health Care 2110-B Bardstown Road (at Douglas Loop), Louisville</td>
+        </tr>
+        <tr>
+          <td><h4>ATM Classes at Shine</h4></td>
+        </tr>
+        <tr>
+          <td>Tuesday</td><td>Thursday</td>
+        </tr>
+        <tr>
+          <td>1:15 - 2:15pm</td><td>8:00 – 9:00am</td>
+        </tr>
+        <tr>
+          <td>Shine, a Music and Conscious Movement Studio, The Clifton Center, 2117 Payne St, Studio 305, Louisville, www.shinelouisville.com</td>
+        </tr>
+        <tr>
+          <td><h4>ATM Classes at Institute for Integrative Medicine in Middletown</h4></td>
+        </tr>
+        <tr>
+          <td>Friday</td>
+        </tr>
+        <tr>
+          <td>10:30 – 11:30am</td>
+        </tr>
+        <tr>
+          <td>Institute for Integrative Medicine, 205 Townepark Circle, Suite 100, Louisville, www.integrativemedicine4you.com</td>
+        </tr>
+        <tr>
+          <td><h4>ATM Class Fees</h4></td>
+        </tr>
+        <tr>
+          <td>Try first class for FREE!!</td>
+        </tr>
+        <tr>
+          <td>$100</td><td>10 Class Pass (good for 16 weeks)</td>
+        </tr>
+        <tr>
+          <td>$15</td><td>Drop-in</td>
+        </tr>
+        <tr>
+          <td>$10</td><td>Drop-in, for current Class Pass holders who want to drop in at another location…hop between my ATM classes</td>
+        </tr>
+      </tbody>
+    </table>    
+      <hr class="header-hr">
     </section>
-    
-    
     <footer class="main-footer">
-      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
-        <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
-      </a> 
-      <a href="#top" id="back-footer">Back to Top</a>
-      <p>&copy; 2017 Dorothy Henning.</p>
+       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
+           <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
+       </a>
+     <a href="#top" id="back-footer">Back to Top</a>
+       <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
   </body>
 </html>
