--- a/individual.html
+++ b/individual.html
@@ -37,7 +37,20 @@
     </header>
 
     <section class="wrapper">
-      <h2>Individual Sessions</h2>
+      <div class="location">
+        <h2>Individual Sessions</h2>
+        <h3>By Appointment, call or text
+        <img src="img/phone.svg" alt="phone contact" class="social-icon">
+        <a href="tel:502-240-7057">502-240-7057</a>
+        </h3>
+        <h3>At our Location</h3>
+        <p>161 St. Matthews Ave, Suite 15, Louisville, KY, 40207</p>
+        <div id="map" style="height: 260px;">
+        </div>
+      </div>
+    
+      <hr class="header-hr">
+      
     </section>
     <footer class="main-footer">
       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
@@ -45,6 +58,31 @@
       </a> 
       <a href="#top" id="back-footer">Back to Top</a>
       <p>&copy; 2017 Dorothy Henning.</p>
-    </footer>
+    </footer>   
+    <!-- Google Map javascript -->
+    <script>
+      function initMap() {
+        var coord = {lat: 38.256636, lng: -85.652270};
+        // Create a map object and specify the DOM element for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: coord,
+          scrollwheel: false,
+          zoom: 15
+        });
+        var marker = new google.maps.Marker({
+          position: coord,
+          map: map
+        });
+        //Resize Function
+        google.maps.event.addDomListener(window, "resize", function() {
+          var center = map.getCenter();
+          google.maps.event.trigger(map, "resize");
+          map.setCenter(center);
+        });
+        google.maps.event.addDomListener(window, 'load', initialize);
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5ZSc7hlxHu8rRf_TJRPC6OoceS1yrx9c&callback=initMap"
+    async defer></script>
   </body>
 </html>
