--- a/resources.html
+++ b/resources.html
@@ -50,11 +50,11 @@
       </div>
     </section>
     <footer class="main-footer">
-      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
-        <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
-      </a> 
-      <a href="#top" id="back-footer">Back to Top</a>
-      <p>&copy; 2017 Dorothy Henning.</p>
+       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
+           <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
+       </a>
+     <a href="#top" id="back-footer">Back to Top</a>
+       <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
   </body>
 </html>
