--- a/workshops.html
+++ b/workshops.html
@@ -37,15 +37,55 @@
     </header>
 
     <section class="wrapper">
-      <h2>Workshops</h2>        
+      <h2>Workshop Coming Soon</h2> 
+      <hr class="header-hr">
+      
+      <div class="location">
+        <h2>Workshops at our Location</h2>
+        <p>Clifton Center, Third Floor, 2117 Payne St, Louisville, KY 40206,</p>
+        <div id="map" style="height: 260px;">
+        </div>
+      </div>
+
+      <hr class="header-hr">
+      <h2>Past Workshops</h2>
+      <img src="img/neck_and_shoulders.jpg" style="width:60%;">
+      <img src="img/Hands-and-Apple.jpg" style="width:60%;">
+      <img src="img/babies.jpg" style="width:60%;">  
     </section>
     
+    <hr class="header-hr">
     <footer class="main-footer">
-      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
-        <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
-      </a> 
-      <a href="#top" id="back-footer">Back to Top</a>
-      <p>&copy; 2017 Dorothy Henning.</p>
+       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
+           <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
+       </a>
+     <a href="#top" id="back-footer">Back to Top</a>
+       <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
+    <!-- Google Map javascript -->
+    <script>
+      function initMap() {
+        var coord = {lat: 38.252792, lng: -85.707061};
+        // Create a map object and specify the DOM element for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: coord,
+          scrollwheel: false,
+          zoom: 15
+        });
+        var marker = new google.maps.Marker({
+          position: coord,
+          map: map
+        });
+        //Resize Function
+        google.maps.event.addDomListener(window, "resize", function() {
+          var center = map.getCenter();
+          google.maps.event.trigger(map, "resize");
+          map.setCenter(center);
+        });
+        google.maps.event.addDomListener(window, 'load', initialize);
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5ZSc7hlxHu8rRf_TJRPC6OoceS1yrx9c&callback=initMap"
+    async defer></script>
   </body>
 </html>
