--- a/individual.html
+++ b/individual.html
@@ -41,7 +41,7 @@
         <h2>Individual Sessions</h2>
         <h3>By Appointment, call or text
         <img src="img/phone.svg" alt="phone contact" class="social-icon">
-        <a href="tel:502-240-7057">502-240-7057</a>
+        <a href="tel:502-240-7057" class="phone">502-240-7057</a>
         </h3>
         <h3>At our Location</h3>
         <p>161 St. Matthews Ave, Suite 15, Louisville, KY, 40207</p>
@@ -53,12 +53,12 @@
       
     </section>
     <footer class="main-footer">
-      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
-        <img src="img/facebook.svg" alt="facebook contact" class="social-icon">
-      </a> 
-      <a href="#top" id="back-footer">Back to Top</a>
-      <p>&copy; 2017 Dorothy Henning.</p>
-    </footer>   
+       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
+           <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
+       </a>
+     <a href="#top" id="back-footer">Back to Top</a>
+       <p>&copy; 2017 Dorothy Henning.</p>
+    </footer>
     <!-- Google Map javascript -->
     <script>
       function initMap() {
