Updated README and newsletter process.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </ul>
         <a href="javascript:void(0);" class="icon" onclick="showMyMenu()">&#9776;</a>
       </nav>
-      
+      <!-- hidden menu to be displayed for smaller screen -->
       <div class="dropdown">
         <button class=dropdown-button>&#9776;</button>
         <ul class="dropdown-content" id="list-nav">
@@ -127,6 +127,8 @@
             The Feldenkrais&trade; Method of Somatic Education develops our ability to become aware of our movement and ourselves. Through this awareness we learn how to move more easily and to change habits of behavior and self-image. The method is taught in two forms, in group classes known as Awareness Through Movement&trade; and in individual hands-on sessions known as Functional Integration&trade; sessions.
         </p>
     </section>
+    
+    <!-- footer with social facebook icon -->
     <footer class="main-footer">
        <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
            <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
