Adjusted several pages to center images.  Improved Readme.  Add thank you page.

--- a/resources.html
+++ b/resources.html
@@ -40,21 +40,21 @@
       <h2>Resources</h2>    
       <div id="media">
         <ul id="video">
-          <li><iframe width="854" height="480" src="https://www.youtube.com/embed/2F91LdHdzM8" frameborder="0" allowfullscreen></iframe></li>
+          <li><iframe width="854" height="480" src="https://www.youtube.com/embed/2F91LdHdzM8"></iframe></li>
 <!--           <li><video src="media/example.mp4" type="video/mp4" controls></video> </li> -->
-          <li><iframe width="854" height="480" src="https://www.youtube.com/watch?v=owztcV5I_SU"></iframe></li>
+<!--          <li><iframe width="854" height="480" src="https://www.youtube.com/watch?v=owztcV5I_SU"></iframe></li> -->
         </ul>
         <ul id="audio">
-          <li><audio src="media/Opening Like a Book ATM.m4a" type="audio/m4a" controls></audio> </li>
+          <li><audio src="media/Opening Like a Book ATM.m4a" controls></audio> </li>
         </ul>
       </div>
     </section>
     <footer class="main-footer">
-       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
-           <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
-       </a>
-     <a href="#top" id="back-footer">Back to Top</a>
-       <p>&copy; 2017 Dorothy Henning.</p>
+      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
+        <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
+      </a>
+      <a href="#top" id="back-footer">Back to Top</a>
+      <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
   </body>
 </html>
