--- a/classes.html
+++ b/classes.html
@@ -41,8 +41,7 @@
       <table class="atm-classes">
       <thead>
         <tr>
-          <th colspan="2">
-          </th>
+          <th colspan="2"></th>
         </tr>
       </thead>
       <tbody>
@@ -56,7 +55,7 @@
           <td>6:30 – 7:30pm</td>
         </tr>
         <tr>
-          <td>Full Circle Holistic Women’s Health Care 2110-B Bardstown Road (at Douglas Loop), Louisville</td>
+         <td>Full Circle Holistic Women’s Health Care 2110-B Bardstown Road (at Douglas Loop), Louisville </td>
         </tr>
         <tr>
           <td><h4>ATM Classes at Shine</h4></td>
@@ -101,12 +100,13 @@
     </table>    
       <hr class="header-hr">
     </section>
+    
     <footer class="main-footer">
-       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
-           <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
-       </a>
-     <a href="#top" id="back-footer">Back to Top</a>
-       <p>&copy; 2017 Dorothy Henning.</p>
+      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
+        <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
+      </a>
+      <a href="#top" id="back-footer">Back to Top</a>
+      <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
   </body>
 </html>
