--- a/thankyou.html
+++ b/thankyou.html
@@ -25,25 +25,25 @@
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="selected">Contact</a></li>
           <li><a href="classes.html">Classes</a></li>
           <li><a href="workshops.html">Workshops</a></li>
-          <li><a href="individual.html" class="selected">Individual Sessions</a></li>
+          <li><a href="individual.html">Individual Sessions</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="resources.html">Resources</a></li>
         </ul>
       </nav>
     </header>
     <section class="wrapper">
-      <h1 style="text-alignment:center;">Thank You!</h1>
+      <h1 style="text-align:center;">Thank You!</h1>
       <hr class="header-hr">
     </section>
     <footer class="main-footer">
-       <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
-           <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
-       </a>
-     <a href="#top" id="back-footer">Back to Top</a>
-       <p>&copy; 2017 Dorothy Henning.</p>
+      <a href="https://www.facebook.com/Feldenkrais-Method-of-Somatic-Education-Practitioner-592330250854862/">
+        <img src="img/footer_facebook.png" alt="facebook contact" class="social-icon">
+      </a>
+      <a href="#top" id="back-footer">Back to Top</a>
+      <p>&copy; 2017 Dorothy Henning.</p>
     </footer>
   </body>
 </html>
