Improved classes table

--- a/classes.html
+++ b/classes.html
@@ -46,7 +46,7 @@
       </thead>
       <tbody>
         <tr>
-          <td><h4>ATM Classes at Full Circle Holistic</h4></td>
+          <td colspan="2" ><h4>ATM Classes at Full Circle Holistic</h4></td>
         </tr>
         <tr>
           <td>Tuesday</td>
@@ -55,10 +55,10 @@
           <td>6:30 – 7:30pm</td>
         </tr>
         <tr>
-         <td>Full Circle Holistic Women’s Health Care 2110-B Bardstown Road (at Douglas Loop), Louisville </td>
+         <td colspan="2">Full Circle Holistic Women’s Health Care 2110-B Bardstown Road (at Douglas Loop), Louisville </td>
         </tr>
         <tr>
-          <td><h4>ATM Classes at Shine</h4></td>
+          <td colspan="2" ><h4>ATM Classes at Shine</h4></td>
         </tr>
         <tr>
           <td>Tuesday</td><td>Thursday</td>
@@ -67,25 +67,25 @@
           <td>1:15 - 2:15pm</td><td>8:00 – 9:00am</td>
         </tr>
         <tr>
-          <td>Shine, a Music and Conscious Movement Studio, The Clifton Center, 2117 Payne St, Studio 305, Louisville, www.shinelouisville.com</td>
+          <td colspan="2" >Shine, a Music and Conscious Movement Studio, The Clifton Center, 2117 Payne St, Studio 305, Louisville, www.shinelouisville.com</td>
         </tr>
         <tr>
-          <td><h4>ATM Classes at Institute for Integrative Medicine in Middletown</h4></td>
+          <td colspan="2" ><h4>ATM Classes at Institute for Integrative Medicine in Middletown</h4></td>
         </tr>
         <tr>
-          <td>Friday</td>
+          <td>Friday</td><td></td>
         </tr>
         <tr>
-          <td>10:30 – 11:30am</td>
+          <td>10:30 – 11:30am</td><td></td>
         </tr>
         <tr>
-          <td>Institute for Integrative Medicine, 205 Townepark Circle, Suite 100, Louisville, www.integrativemedicine4you.com</td>
+          <td colspan="2" >Institute for Integrative Medicine, 205 Townepark Circle, Suite 100, Louisville, www.integrativemedicine4you.com</td>
         </tr>
         <tr>
-          <td><h4>ATM Class Fees</h4></td>
+          <td colspan="2"><h4>ATM Class Fees</h4></td>
         </tr>
         <tr>
-          <td>Try first class for FREE!!</td>
+          <td colspan="2">Try first class for FREE!!</td>
         </tr>
         <tr>
           <td>$100</td><td>10 Class Pass (good for 16 weeks)</td>
@@ -94,7 +94,8 @@
           <td>$15</td><td>Drop-in</td>
         </tr>
         <tr>
-          <td>$10</td><td>Drop-in, for current Class Pass holders who want to drop in at another location…hop between my ATM classes</td>
+          <td>$10</td>
+          <td colspan="2">Drop-in, for current Class Pass holders who want to drop in at another location…hop between my ATM classes</td>
         </tr>
       </tbody>
     </table>    
